@startuml
title "ER-Diregram"

' 클래스 선언
' Comment Entity
class Comment {
    - id: Long
    - content: String
    - targetId: Long
    - targetType: String
    - kakaoUser: KakaoUser
    - createdAt: LocalDateTime
}

' Favorite Entity
class Favorite {
    - id: Long
    - user: KakaoUser
    - restaurant: Restaurant
}

' FreePostWrite Entity
class FreePostWrite {
    - id: Long
    - user: KakaoUser
    - writer: String
    - title: String
    - content: String
    - createdAt: LocalDateTime
}

' KakaoUser Entity
class KakaoUser {
    - id: Long
    - kakaoId: String
    - email: String
    - nickname: String
    - profileImage: String
    - grade: UserGrade
    - mateFoodPosts: MateFoodPosts
    - posts: FreePostWrite
    - reviews: Review
}

' MateFoodPost Entity
class MateFoodPost {
    - id: Long
    - user: KakaoUser
    - writer: String
    - title: String
    - content: String
    - meetingStation: String
    - meetingTime: String
    - recruitCount: Integer
    - preferredGender: String
    - status: String
    - createdAt: LocalDateTime
    - updatedAt: LocalDateTime

    + update(title, content, meetingStation, meetingTime, recruitCount, preferredGender, status)
}

' Restaurant Entity
class Restaurant {
    id: Long
    name: String
    stationName: String
    category: String
    rating: Double
    reviewCount: Integer
    imageUrl: String
    description: String
    store: Store
}

' Review Entity
class Review {
    - reviewId: Long
    - user: KakaoUser
    - restaurant: Restaurant
    - author: String
    - title: String
    - content: String
    - rate: Integer
    - imagePath: String
    - createdAt: LocalDateTime
    - ownerReplyContent: String
    - ownerRepliedAt: LocalDateTime
    + updateOwnerReply(replyContent)
    + clearOwnerReply()
}

' Store Entity
class Store {
    - storeId: Long
    - name: String
    - address: String
    - hours: String
    - phone: String
    - description: String
    - kakaoId: String
    - contact: String
    - registrationNumber: String
    - category: String
    - imageUrl: String
    - meetingStation: String
    + updateInfo(name, address, hours, contact, description, registrationNumber, category, imageUrl, meetingStation)
}

' StoreImage Entity
class StoreImage {
    - imageId: Long
    - imageUrl: String
    - type: String
    - store: Store
}

' TodayMenu Entity
class TodayMenu {
    - id: Long
    - name: String
    - description: String
    - imageUrl: String
    - category: String
}

' UserGrade Enum
enum UserGrade {
    GENERAL
    OWNER
    ADMIN
    --
    - label: String
    --
    + getLabel(): String
}

' 이제 연결하기
' 1. KakaoUser와 관련된 관계
KakaoUser "1" --> "N" Comment : 댓글 작성
KakaoUser "1" --> "N" Favorite : 즐겨찾기 추가
KakaoUser "1" --> "N" FreePostWrite : 게시글 작성
KakaoUser "1" --> "N" MateFoodPost : 게시글 작성
KakaoUser "1" --> "N" Review : 리뷰 작성
KakaoUser "1" --> "1" UserGrade : 유저 등급 지정 (단방향 연관)

' 2. Favorite과 관련된 관계
Favorite "N" -- "1" Restaurant : 즐겨찾기한 음식점

' 3. Restaurant과 관련된 관계ssss
Restaurant "1" -- "1" Store : 소유 (Restaurant이 특정 Store에 속함)
Restaurant "1" --> "N" Review : 대상

' 4. Store와 관련된 관계
Store "1" --> "N" StoreImage : 이미지 포함


@enduml